Add Pihole module
Just can check the status for now.

--- a/App.config
+++ b/App.config
@@ -218,6 +218,12 @@
       <setting name="Mail_IMAPPort" serializeAs="String">
         <value>993</value>
       </setting>
+      <setting name="Pihole_Enable" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="Pihole_IPAddress" serializeAs="String">
+        <value>0.0.0.0</value>
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <entityFramework>
