Make async module load optional
Helpful for debugging, and testing the performance difference.

--- a/App.config
+++ b/App.config
@@ -224,6 +224,9 @@
       <setting name="Pihole_IPAddress" serializeAs="String">
         <value>0.0.0.0</value>
       </setting>
+      <setting name="Global_LoadModulesAsync" serializeAs="String">
+        <value>True</value>
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <entityFramework>
