Track last time thermostat data updated
Good for knowing if the status report data we're sending is actually current.

--- a/App.config
+++ b/App.config
@@ -227,6 +227,9 @@
       <setting name="Global_LoadModulesAsync" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="Global_TimeThermostatLastUpdated" serializeAs="String">
+        <value />
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <entityFramework>
