Add Z-Wave module basics
Doesn't actually communicate with any devices yet.

--- a/App.config
+++ b/App.config
@@ -230,6 +230,12 @@
       <setting name="Global_TimeThermostatLastUpdated" serializeAs="String">
         <value />
       </setting>
+      <setting name="ZWave_LastGoodCOMPort" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="ZWave_Enable" serializeAs="String">
+        <value>False</value>
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <entityFramework>
