--- a/My Project/Settings.settings
+++ b/My Project/Settings.settings
@@ -209,5 +209,11 @@
     <Setting Name="Global_TimeThermostatLastUpdated" Type="System.DateTime" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="ZWave_LastGoodCOMPort" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="ZWave_Enable" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
