--- a/HAController.vbproj
+++ b/HAController.vbproj
@@ -150,6 +150,7 @@
     <Compile Include="modMatrixLCD.vb" />
     <Compile Include="modMusic.vb" />
     <Compile Include="modWolframAlpha.vb" />
+    <Compile Include="modZWave.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
