Add preserve caps mode
This is intended for commands which need to include capital letters. However, since Converse matches with lowercase characters, this means exact case input must be used.

--- a/App.config
+++ b/App.config
@@ -236,6 +236,9 @@
       <setting name="ZWave_Enable" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="Converse_PreserveCaps" serializeAs="String">
+        <value>False</value>
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <entityFramework>
