--- a/My Project/Settings.settings
+++ b/My Project/Settings.settings
@@ -215,5 +215,8 @@
     <Setting Name="ZWave_Enable" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="Converse_PreserveCaps" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
