Add library module and ISBN conversion tool
No actual library functionality yet, just getting this established

--- a/App.config
+++ b/App.config
@@ -239,6 +239,12 @@
       <setting name="Converse_PreserveCaps" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="Library_Enable" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="Library_Repository" serializeAs="String">
+        <value />
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <entityFramework>
