Make scripts folder an app setting

--- a/App.config
+++ b/App.config
@@ -284,6 +284,9 @@
       <setting name="Global_UpdateFileURI" serializeAs="String">
         <value>https://hac.jacobweisz.com/dl/update.zip</value>
       </setting>
+      <setting name="Global_ScriptsFolderURI" serializeAs="String">
+        <value>C:\HAC\scripts\</value>
+      </setting>
     </HAController.My.MySettings>
   </applicationSettings>
   <appSettings>
