--- a/My Project/Settings.settings
+++ b/My Project/Settings.settings
@@ -224,5 +224,8 @@
     <Setting Name="Library_Repository" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="Global_ScriptsFolderURI" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">C:\HAC\scripts\</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
