Add sync module
This will eventually talk to xrf_sync!

--- a/App.config
+++ b/App.config
@@ -245,6 +245,18 @@
       <setting name="Library_Repository" serializeAs="String">
         <value />
       </setting>
+      <setting name="Sync_Enable" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="Sync_ServerURL" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="Sync_AccessKey" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="Sync_CryptoKey" serializeAs="String">
+        <value />
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <entityFramework>
