--- a/App.config
+++ b/App.config
@@ -1,34 +1,34 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="HAController.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+      <section name="HAController.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
     </sectionGroup>
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="HAController.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+      <section name="HAController.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
     </sectionGroup>
     
   </configSections>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
   </startup>
   <system.diagnostics>
     <sources>
       <!-- This section defines the logging configuration for My.Application.Log -->
       <source name="DefaultSource" switchName="DefaultSwitch">
         <listeners>
-          <add name="Delimited" />
+          <add name="Delimited"/>
           <!-- Uncomment the below section to write to the Application Event Log -->
           <!--<add name="EventLog"/>-->
         </listeners>
       </source>
     </sources>
     <switches>
-      <add name="DefaultSwitch" value="Verbose" />
+      <add name="DefaultSwitch" value="Verbose"/>
     </switches>
     <sharedListeners>
-      <add name="Delimited" type="System.Diagnostics.DelimitedListTraceListener,             System, Version=2.0.0.0,             Culture=neutral, PublicKeyToken=b77a5c561934e089" initializeData="C:\HAC\HAClog.txt" traceOutputOptions="DateTime" />
+      <add name="Delimited" type="System.Diagnostics.DelimitedListTraceListener,             System, Version=2.0.0.0,             Culture=neutral, PublicKeyToken=b77a5c561934e089" initializeData="C:\HAC\HAClog.txt" traceOutputOptions="DateTime"/>
       <!-- Uncomment the below section and replace APPLICATION_NAME with the name of your application to write to the Application Event Log -->
       <!--<add name="EventLog" type="System.Diagnostics.EventLogTraceListener" initializeData="APPLICATION_NAME"/> -->
     </sharedListeners>
@@ -36,28 +36,28 @@
   <userSettings>
     <HAController.My.MySettings>
       <setting name="Global_LastHomeStatus" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="Insteon_AlarmAddr" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="Insteon_DoorSensorAddr" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="Insteon_Enable" serializeAs="String">
         <value>False</value>
       </setting>
       <setting name="Insteon_LastGoodCOMPort" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="Insteon_ThermostatAddr" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="OpenWeatherMap_APIKey" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="OpenWeatherMap_CityID" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="OpenWeatherMap_Enable" serializeAs="String">
         <value>False</value>
@@ -75,55 +75,55 @@
         <value>False</value>
       </setting>
       <setting name="Mail_SMTPHost" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="Mail_SMTPPort" serializeAs="String">
         <value>587</value>
       </setting>
       <setting name="Mail_To" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="Mail_From" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="Mail_Password" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="Mail_Username" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="Insteon_SmokeBridgeAddr" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="Insteon_BackDoorSensorAddr" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="Insteon_WakeLightAddr" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="Converse_BotName" serializeAs="String">
         <value>Sarah</value>
       </setting>
       <setting name="Mail_POPHost" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="Mail_POPPort" serializeAs="String">
         <value>995</value>
       </setting>
       <setting name="Mail_CmdWhitelist" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="Mail_CmdKey" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="Speech_SelectedVoice" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="Converse_BotGender" serializeAs="String">
         <value>Female</value>
       </setting>
       <setting name="Global_TimeDoorLastOpened" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="DreamCheeky_Enable" serializeAs="String">
         <value>False</value>
@@ -141,10 +141,10 @@
         <value>0</value>
       </setting>
       <setting name="Global_LastKnownOutsideCondition" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="Music_LastPlaylist" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="Global_InsideTempHeatWarning" serializeAs="String">
         <value>82</value>
@@ -159,7 +159,7 @@
         <value>True</value>
       </setting>
       <setting name="MatrixLCD_LastGoodCOMPort" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="MatrixLCD_Enable" serializeAs="String">
         <value>False</value>
@@ -174,7 +174,7 @@
         <value>False</value>
       </setting>
       <setting name="GPS_LastGoodCOMPort" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="GPS_RateLimit" serializeAs="String">
         <value>1</value>
@@ -186,25 +186,25 @@
         <value>False</value>
       </setting>
       <setting name="MapQuest_APIKey" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="GPS_DefaultAddress" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="WolframAlpha_Enable" serializeAs="String">
         <value>False</value>
       </setting>
       <setting name="WolframAlpha_APIKey" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="Global_StartupCommand" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="MatrixLCD_ToastHoldTime" serializeAs="String">
         <value>3</value>
       </setting>
       <setting name="Insteon_ThermostatSlaveAddr" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="Global_LastKnownInsideTemp2nd" serializeAs="String">
         <value>0</value>
@@ -213,7 +213,7 @@
         <value>False</value>
       </setting>
       <setting name="Mail_IMAPHost" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="Mail_IMAPPort" serializeAs="String">
         <value>993</value>
@@ -228,10 +228,10 @@
         <value>True</value>
       </setting>
       <setting name="Global_TimeThermostatLastUpdated" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="ZWave_LastGoodCOMPort" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="ZWave_Enable" serializeAs="String">
         <value>False</value>
@@ -243,42 +243,42 @@
         <value>False</value>
       </setting>
       <setting name="Library_Repository" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="Sync_Enable" serializeAs="String">
         <value>False</value>
       </setting>
       <setting name="Sync_ServerURL" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="Sync_AccessKey" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="Sync_CryptoKey" serializeAs="String">
-        <value />
+        <value/>
       </setting>
     </HAController.My.MySettings>
   </userSettings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="v12.0" />
+        <parameter value="v12.0"/>
       </parameters>
     </defaultConnectionFactory>
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-      <provider invariantName="System.Data.SQLite.EF6" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
+      <provider invariantName="System.Data.SQLite.EF6" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6"/>
     </providers>
   </entityFramework>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="Common.Logging.Core" publicKeyToken="af08829b84f0328e" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.4.1.0" newVersion="3.4.1.0" />
+        <assemblyIdentity name="Common.Logging.Core" publicKeyToken="af08829b84f0328e" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-3.4.1.0" newVersion="3.4.1.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Common.Logging" publicKeyToken="af08829b84f0328e" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.4.1.0" newVersion="3.4.1.0" />
+        <assemblyIdentity name="Common.Logging" publicKeyToken="af08829b84f0328e" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-3.4.1.0" newVersion="3.4.1.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -302,7 +302,7 @@
     </HAController.My.MySettings>
   </applicationSettings>
   <appSettings>
-    <add key="EnableWindowsFormsHighDpiAutoResizing" value="true" />
+    <add key="EnableWindowsFormsHighDpiAutoResizing" value="true"/>
   </appSettings>
   
 </configuration>
