--- a/App.config
+++ b/App.config
@@ -36,28 +36,28 @@
   <userSettings>
     <HAController.My.MySettings>
       <setting name="Global_LastHomeStatus" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="Insteon_AlarmAddr" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="Insteon_DoorSensorAddr" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="Insteon_Enable" serializeAs="String">
         <value>False</value>
       </setting>
       <setting name="Insteon_LastGoodCOMPort" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="Insteon_ThermostatAddr" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="OpenWeatherMap_APIKey" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="OpenWeatherMap_CityID" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="OpenWeatherMap_Enable" serializeAs="String">
         <value>False</value>
@@ -75,55 +75,55 @@
         <value>False</value>
       </setting>
       <setting name="Mail_SMTPHost" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="Mail_SMTPPort" serializeAs="String">
         <value>587</value>
       </setting>
       <setting name="Mail_To" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="Mail_From" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="Mail_Password" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="Mail_Username" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="Insteon_SmokeBridgeAddr" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="Insteon_BackDoorSensorAddr" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="Insteon_WakeLightAddr" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="Converse_BotName" serializeAs="String">
         <value>Sarah</value>
       </setting>
       <setting name="Mail_POPHost" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="Mail_POPPort" serializeAs="String">
         <value>995</value>
       </setting>
       <setting name="Mail_CmdWhitelist" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="Mail_CmdKey" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="Speech_SelectedVoice" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="Converse_BotGender" serializeAs="String">
         <value>Female</value>
       </setting>
       <setting name="Global_TimeDoorLastOpened" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="DreamCheeky_Enable" serializeAs="String">
         <value>False</value>
@@ -141,10 +141,10 @@
         <value>0</value>
       </setting>
       <setting name="Global_LastKnownOutsideCondition" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="Music_LastPlaylist" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="Global_InsideTempHeatWarning" serializeAs="String">
         <value>82</value>
@@ -159,7 +159,7 @@
         <value>True</value>
       </setting>
       <setting name="MatrixLCD_LastGoodCOMPort" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="MatrixLCD_Enable" serializeAs="String">
         <value>False</value>
@@ -174,7 +174,7 @@
         <value>False</value>
       </setting>
       <setting name="GPS_LastGoodCOMPort" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="GPS_RateLimit" serializeAs="String">
         <value>1</value>
@@ -186,25 +186,25 @@
         <value>False</value>
       </setting>
       <setting name="MapQuest_APIKey" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="GPS_DefaultAddress" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="WolframAlpha_Enable" serializeAs="String">
         <value>False</value>
       </setting>
       <setting name="WolframAlpha_APIKey" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="Global_StartupCommand" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="MatrixLCD_ToastHoldTime" serializeAs="String">
         <value>3</value>
       </setting>
       <setting name="Insteon_ThermostatSlaveAddr" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="Global_LastKnownInsideTemp2nd" serializeAs="String">
         <value>0</value>
@@ -213,7 +213,7 @@
         <value>False</value>
       </setting>
       <setting name="Mail_IMAPHost" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="Mail_IMAPPort" serializeAs="String">
         <value>993</value>
@@ -228,10 +228,10 @@
         <value>True</value>
       </setting>
       <setting name="Global_TimeThermostatLastUpdated" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="ZWave_LastGoodCOMPort" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="ZWave_Enable" serializeAs="String">
         <value>False</value>
@@ -243,19 +243,31 @@
         <value>False</value>
       </setting>
       <setting name="Library_Repository" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="Sync_Enable" serializeAs="String">
         <value>False</value>
       </setting>
       <setting name="Sync_ServerURL" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="Sync_AccessKey" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="Sync_CryptoKey" serializeAs="String">
-        <value/>
+        <value />
+      </setting>
+      <setting name="Insteon_COMPortDeviceName" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="GPS_COMPortDeviceName" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="MatrixLCD_COMPortDeviceName" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="ZWave_COMPortDeviceName" serializeAs="String">
+        <value />
       </setting>
     </HAController.My.MySettings>
   </userSettings>
