Add SmartCOM for Insteon module

--- a/App.config
+++ b/App.config
@@ -269,6 +269,9 @@
       <setting name="ZWave_COMPortDeviceName" serializeAs="String">
         <value />
       </setting>
+      <setting name="Global_SmartCOM" serializeAs="String">
+        <value>True</value>
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <entityFramework>
