--- a/My Project/Settings.settings
+++ b/My Project/Settings.settings
@@ -251,5 +251,8 @@
     <Setting Name="ZWave_COMPortDeviceName" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="Global_SmartCOM" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
