Add Stream Deck support

--- a/App.config
+++ b/App.config
@@ -272,6 +272,9 @@
       <setting name="Global_SmartCOM" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="StreamDeck_Enable" serializeAs="String">
+        <value>False</value>
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <entityFramework>
