--- a/My Project/Settings.settings
+++ b/My Project/Settings.settings
@@ -254,5 +254,8 @@
     <Setting Name="Global_SmartCOM" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="StreamDeck_Enable" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
