--- a/packages.config
+++ b/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="hidlibrary" version="3.3.28" targetFramework="net48" />
+  <package id="hidlibrary" version="3.3.40" targetFramework="net48" />
   <package id="HidSharp" version="2.1.0" targetFramework="net48" />
-  <package id="OpenMacroBoard.SDK" version="2.0.0" targetFramework="net48" />
+  <package id="OpenMacroBoard.SDK" version="2.1.0" targetFramework="net48" />
   <package id="StreamDeckSharp" version="2.2.0" targetFramework="net48" />
-  <package id="System.Data.SQLite.Core" version="1.0.113.1" targetFramework="net48" />
-  <package id="System.Drawing.Common" version="4.5.1" targetFramework="net48" />
+  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.113.3" targetFramework="net48" />
+  <package id="System.Data.SQLite.Core" version="1.0.113.7" targetFramework="net48" />
+  <package id="System.Drawing.Common" version="4.7.1" targetFramework="net48" />
 </packages>
