Enable IMAP by default
POP is a bit old

--- a/App.config
+++ b/App.config
@@ -210,7 +210,7 @@
         <value>0</value>
       </setting>
       <setting name="Mail_IMAPMode" serializeAs="String">
-        <value>False</value>
+        <value>True</value>
       </setting>
       <setting name="Mail_IMAPHost" serializeAs="String">
         <value />
