Fix saving DeviceCollection

--- a/packages.config
+++ b/packages.config
@@ -7,4 +7,5 @@
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.116.0" targetFramework="net48" />
   <package id="System.Data.SQLite.Core" version="1.0.116.0" targetFramework="net48" />
   <package id="System.Drawing.Common" version="6.0.0" targetFramework="net48" />
+  <package id="XmlSerializerHelper" version="4.0.19096.1" targetFramework="net48" />
 </packages>
