Create PrimaryUser setting

--- a/App.config
+++ b/App.config
@@ -275,6 +275,9 @@
       <setting name="StreamDeck_Enable" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="Global_PrimaryUser" serializeAs="String">
+        <value>me</value>
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <entityFramework>
