Basic support for Sync on Sandstorm

--- a/App.config
+++ b/App.config
@@ -278,6 +278,9 @@
       <setting name="Global_PrimaryUser" serializeAs="String">
         <value>me</value>
       </setting>
+      <setting name="Sync_SandstormToken" serializeAs="String">
+        <value />
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <entityFramework>
