Add ability to get public IP address

--- a/App.config
+++ b/App.config
@@ -281,6 +281,12 @@
       <setting name="Sync_SandstormToken" serializeAs="String">
         <value />
       </setting>
+      <setting name="Ping_PublicIPSource" serializeAs="String">
+        <value>dyndns</value>
+      </setting>
+      <setting name="Ping_LastKnownPublicIP" serializeAs="String">
+        <value />
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <entityFramework>
