--- a/My Project/Settings.settings
+++ b/My Project/Settings.settings
@@ -263,5 +263,11 @@
     <Setting Name="Sync_SandstormToken" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="Ping_PublicIPSource" Type="System.String" Scope="User">
+      <Value Profile="(Default)">dyndns</Value>
+    </Setting>
+    <Setting Name="Ping_LastKnownPublicIP" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
