Default public IP value

--- a/App.config
+++ b/App.config
@@ -285,7 +285,7 @@
         <value>dyndns</value>
       </setting>
       <setting name="Ping_LastKnownPublicIP" serializeAs="String">
-        <value />
+        <value>0.0.0.0</value>
       </setting>
     </HAController.My.MySettings>
   </userSettings>
