Update Pi-hole module for auth

--- a/App.config
+++ b/App.config
@@ -287,6 +287,9 @@
       <setting name="Ping_LastKnownPublicIP" serializeAs="String">
         <value>0.0.0.0</value>
       </setting>
+      <setting name="Pihole_APIKey" serializeAs="String">
+        <value />
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <entityFramework>
