--- a/My Project/Settings.settings
+++ b/My Project/Settings.settings
@@ -269,5 +269,8 @@
     <Setting Name="Ping_LastKnownPublicIP" Type="System.String" Scope="User">
       <Value Profile="(Default)">0.0.0.0</Value>
     </Setting>
+    <Setting Name="Pihole_APIKey" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
