Insteon: Sump pump alarm monitoring

--- a/App.config
+++ b/App.config
@@ -290,6 +290,9 @@
       <setting name="Pihole_APIKey" serializeAs="String">
         <value />
       </setting>
+      <setting name="Insteon_SumpAlarmAddr" serializeAs="String">
+        <value />
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <entityFramework>
