Sync: Add local queue mode

--- a/App.config
+++ b/App.config
@@ -293,6 +293,9 @@
       <setting name="Insteon_SumpAlarmAddr" serializeAs="String">
         <value />
       </setting>
+      <setting name="Sync_LocalQueueMode" serializeAs="String">
+        <value>False</value>
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <entityFramework>
