--- a/My Project/Settings.settings
+++ b/My Project/Settings.settings
@@ -275,5 +275,8 @@
     <Setting Name="Insteon_SumpAlarmAddr" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="Sync_LocalQueueMode" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
