--- a/packages.config
+++ b/packages.config
@@ -4,6 +4,7 @@
   <package id="HidSharp" version="2.1.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.0" targetFramework="net48" />
   <package id="OpenMacroBoard.SDK" version="3.0.0" targetFramework="net48" />
+  <package id="Rssdp" version="4.0.4" targetFramework="net48" />
   <package id="StreamDeckSharp" version="3.2.0" targetFramework="net48" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.119.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.6.0" targetFramework="net48" />
