Update StreamDeckSharp to latest

--- a/packages.config
+++ b/packages.config
@@ -3,17 +3,19 @@
   <package id="hidlibrary" version="3.3.40" targetFramework="net48" />
   <package id="HidSharp" version="2.1.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.0" targetFramework="net48" />
-  <package id="OpenMacroBoard.SDK" version="3.0.0" targetFramework="net48" />
+  <package id="OpenMacroBoard.SDK" version="6.0.0" targetFramework="net48" />
   <package id="Rssdp" version="4.0.4" targetFramework="net48" />
-  <package id="StreamDeckSharp" version="3.2.0" targetFramework="net48" />
+  <package id="SixLabors.ImageSharp" version="2.1.9" targetFramework="net48" />
+  <package id="StreamDeckSharp" version="6.0.0" targetFramework="net48" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.119.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.6.0" targetFramework="net48" />
   <package id="System.Data.SQLite.Core" version="1.0.119.0" targetFramework="net48" />
-  <package id="System.Drawing.Common" version="6.0.0" targetFramework="net48" />
+  <package id="System.Drawing.Common" version="9.0.0" targetFramework="net48" />
   <package id="System.IO.Pipelines" version="9.0.0" targetFramework="net48" />
   <package id="System.Memory" version="4.6.0" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.6.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.0" targetFramework="net48" />
+  <package id="System.Text.Encoding.CodePages" version="9.0.0" targetFramework="net48" />
   <package id="System.Text.Encodings.Web" version="9.0.0" targetFramework="net48" />
   <package id="System.Text.Json" version="9.0.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.6.0" targetFramework="net48" />
