Mail: Log available PurelyMail credit

--- a/My Project/Settings.settings
+++ b/My Project/Settings.settings
@@ -266,5 +266,8 @@
     <Setting Name="Sync_LocalQueueMode" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="Mail_PurelyMailAPIKey" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
