--- a/App.config
+++ b/App.config
@@ -284,6 +284,9 @@
       <setting name="Sync_LocalQueueMode" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="Mail_PurelyMailAPIKey" serializeAs="String">
+        <value />
+      </setting>
     </HAController.My.MySettings>
   </userSettings>
   <entityFramework>
