Don't store verbose logging in text log

--- a/App.config
+++ b/App.config
@@ -18,17 +18,26 @@
       <!-- This section defines the logging configuration for My.Application.Log -->
       <source name="DefaultSource" switchName="DefaultSwitch">
         <listeners>
+          <remove name="Default" />
           <add name="Delimited" />
           <!-- Uncomment the below section to write to the Application Event Log -->
           <!--<add name="EventLog"/>-->
         </listeners>
       </source>
+      <source name="TraceSource" switchName="TraceSwitch">
+        <listeners>
+          <remove name="Default" />
+          <add name="Trace" />
+        </listeners>
+      </source>
     </sources>
     <switches>
-      <add name="DefaultSwitch" value="Verbose" />
+      <add name="DefaultSwitch" value="Information" />
+      <add name="TraceSwitch" value="Verbose" />
     </switches>
     <sharedListeners>
-      <add name="Delimited" type="System.Diagnostics.DelimitedListTraceListener,             System, Version=2.0.0.0,             Culture=neutral, PublicKeyToken=b77a5c561934e089" initializeData="C:\HAC\HAClog.txt" traceOutputOptions="DateTime" />
+      <add name="Delimited" type="System.Diagnostics.DelimitedListTraceListener, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" initializeData="C:\HAC\HAClog.txt" traceOutputOptions="DateTime" />
+      <add name="Trace" type="System.Diagnostics.DefaultTraceListener, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL" />
       <!-- Uncomment the below section and replace APPLICATION_NAME with the name of your application to write to the Application Event Log -->
       <!--<add name="EventLog" type="System.Diagnostics.EventLogTraceListener" initializeData="APPLICATION_NAME"/> -->
     </sharedListeners>
